--- a/src/main/resources/pokemonArena.fxml
+++ b/src/main/resources/pokemonArena.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -17,6 +18,7 @@
         </ImageView>
         <FlowPane layoutX="406.0" layoutY="230.0" prefHeight="200.0" prefWidth="200.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
             <children>
+            <TextField fx:id="playerName" />
                 <ProgressBar fx:id="playerHealthProgressBar" prefHeight="14.0" prefWidth="170.0" progress="1.0" style="-fx-accent: green;">
                     <FlowPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -39,16 +41,17 @@
             <padding>
                 <Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
             </padding></ProgressBar>
-        <ImageView fitHeight="200.0" fitWidth="200.0" layoutX="218.0" layoutY="230.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fx:id="playerSprite" fitHeight="200.0" fitWidth="200.0" layoutX="218.0" layoutY="230.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@Sprites/SceptileAlly.png" />
             </image>
         </ImageView>
-        <ImageView fx:id="background" fitHeight="110.0" fitWidth="175.0" layoutX="604.0" layoutY="170.0" pickOnBounds="true" preserveRatio="true" style="-fx-background-size: contain;">
+        <ImageView fx:id="enemySprite" fitHeight="110.0" fitWidth="175.0" layoutX="604.0" layoutY="170.0" pickOnBounds="true" preserveRatio="true" style="-fx-background-size: contain;">
             <image>
                 <Image url="@Sprites/SnorlaxEnemy.png" />
             </image>
         </ImageView>
       <Button fx:id="btnQuit" layoutX="50.0" layoutY="450.0" mnemonicParsing="false" onMouseClicked="#goHome" text="Quit" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="25.0" />
+      <TextField fx:id="enemyName" layoutX="30.0" layoutY="1.0" />
     </children>
 </AnchorPane>
